k8s/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - image: "wxytjustb/httpserver:latest"
          name: httpserver

          # 优雅启动，检查服务启动状态之后ready
          readinessProbe:
            httpGet:
              path: healthz
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 5
            successThreshold: 2
          # 探活，失败重启
          livenessProbe:
            httpGet:
              path: healthz
              port: 8080

          # 优雅中止, 利用k8s发送信号机制，已在httpserver里实现

          # 资源一致即为保证
          resources:
            limits:
              memory: 10Mi
              cpu: 100m
            requests:
              memory: 10Mi
              cpu: 100m

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  ports:
    - name: http-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: server
  type: ClusterIP
